# robot-simulation

./: .gitignore  README.md  run_gazebo.sh  run_robot_controller.sh  run_rviz.sh
models/: bricks.FCStd
models/gazebotry/unit_box/: model.sdf
newnewnew/bricks_complete/brick/: model.sdf
newnewnew/bricks_complete/bricknorm/brick/: model.sdf
newnewnew/briks_down/: model.config  model.sdf
newnewnew/briks_tmp_new/: model.config  model.sdf
newnewnew/briks_up/: model.config  model.sdf
second_world/: model.config  model.sdf
snap/code/common/.cache/: gdk-pixbuf-loaders.cache
snap/snap-store/518/.config/: user-dirs.dirs
snap/snap-store/518/.config/dconf/: user
snap/snap-store/518/.config/gtk-3.0/: settings.ini
snap/snap-store/518/.config/ibus/: bus
snap/snap-store/518/.local/share/icons/Adwaita/: icon-theme.cache
snap/snap-store/518/.local/share/icons/Humanity/: icon-theme.cache
snap/snap-store/518/.local/share/icons/Humanity-Dark/: icon-theme.cache
snap/snap-store/518/.local/share/icons/hicolor/: icon-theme.cache
snap/snap-store/518/.local/share/icons/ubuntu-mono-dark/: icon-theme.cache
snap/snap-store/518/.local/share/icons/ubuntu-mono-light/: icon-theme.cache
snap/snap-store/common/.cache/fontconfig/: 4794a0821666d79190d59a36cb4f44b5-le64.cache-7  6d41288fd70b0be22e8c3a91e032eec0-le64.cache-7  bf3b770c553c462765856025a94f1ce6-le64.cache-7  c57959a16110560c8d0fcea73374aeeb-le64.cache-7  d589a48862398ed80a3d6066f4f56f4c-le64.cache-7  de156ccd2eddbdc19d37a45b8b2aac9c-le64.cache-7
snap/snap-store/common/.cache/gnome-software/fwupd/: fcc13ee9c78a21355450bd81a217d54974d0ed9c5fb227f4e5f490dc8dd257d5-Lenovo-KIOXIA-BG4-NVMe-0107AELA.cab
snap/snap-store/common/.cache/gnome-software/odrs/: blueman-manager.desktop.json  ratings.json
snap/spotify/46/.config/fontconfig/: fonts.conf
snap/spotify/46/.config/gtk-2.0/: gtkfilechooser.ini
snap/spotify/46/.config/gtk-3.0/: bookmarks
snap/spotify/46/.config/spotify/: prefs
snap/spotify/46/.config/spotify/Users/wgonzbip7qjjbo7tmoxo7g4g7-user/: frecency.pb  local_sync_state  log-tracked  pending-messages_seq_nr  prefs
snap/spotify/46/.pki/nssdb/: key4.db  pkcs11.txt
snap/spotify/common/.cache/fontconfig/: 4794a0821666d79190d59a36cb4f44b5-le64.cache-7  6d41288fd70b0be22e8c3a91e032eec0-le64.cache-7  7ef2298fde41cc6eeb7af42e48b7d293-le64.cache-7  bf3b770c553c462765856025a94f1ce6-le64.cache-7  c57959a16110560c8d0fcea73374aeeb-le64.cache-7  d589a48862398ed80a3d6066f4f56f4c-le64.cache-7  de156ccd2eddbdc19d37a45b8b2aac9c-le64.cache-7
snap/spotify/common/.cache/immodules/: immodules.cache
snap/spotify/common/.cache/spotify/: ct.pb  offline.bnk
snap/spotify/common/.cache/spotify/Browser/: .org.chromium.Chromium.hXbcNN  Cookies  LOG  LOG.old  Network Persistent State  TransportSecurity  Visited Links
snap/spotify/common/.cache/spotify/Browser/95c795338aeacc3b1ed450a8fd792551628b9166/: LOG  LOG.old  Network Persistent State  TransportSecurity  Visited Links
snap/spotify/common/.cache/spotify/Browser/Cache/: 0071d2cd4f25883f_0  01506fb2814b0989_0  02b3291b6e7a8369_0  02ba755437187efe_0  (+289 more)
snap/spotify/common/.cache/spotify/public.ldb/: 000005.ldb  000008.ldb  LOG  LOG.old
src/msg_generatorstd_msgs/: CMakeLists.txt  package.xml
src/msg_generatorstd_msgs/msg/: VelodyneSensor.msg
src/odev/: CMakeLists.txt  package.xml
src/odev/cfg/: dyn_param.cfg
src/odev/scripts/: arduino_listener.py
src/odev/src/: listener.cpp  listener_transformfull.cpp
src/turtlebot3/turtlebot3_description/urdf/: turtlebot3_burger_for_autorace.gazebo.xacro  turtlebot3_my_burger.gazebo.xacro  turtlebot3_my_burger.urdf.xacro
src/turtlebot3_simulations/turtlebot3_gazebo/: package.xml
src/turtlebot3_simulations/turtlebot3_gazebo/launch/: turtlebot3_my_world.launch
src/turtlebot3_simulations/turtlebot3_gazebo/models/brick/: brick.dae
src/turtlebot3_simulations/turtlebot3_gazebo/models/briсk/: model.config  model.sdf
src/turtlebot3_simulations/turtlebot3_gazebo/models/briсk/meshes/: brick.dae
src/turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_my_world/: model.config  model.sdf
src/turtlebot3_simulations/turtlebot3_my_controller/: CMakeLists.txt  package.xml
src/turtlebot3_simulations/turtlebot3_my_controller/include/SCL/: CMakeLists.txt  SCL.cpp  SCL.h
src/turtlebot3_simulations/turtlebot3_my_controller/include/serverHandler/: serverHandler.h
src/turtlebot3_simulations/turtlebot3_my_controller/include/turtlebot3_my_controller/: VelodyneSensor.h  turtlebot3_drive.h
src/turtlebot3_simulations/turtlebot3_my_controller/launch/: multi_turtlebot3.launch  turtlebot3_autorace.launch  turtlebot3_autorace_2020.launch  turtlebot3_empty_world.launch  turtlebot3_gazebo_rviz.launch  turtlebot3_house.launch  turtlebot3_my_world.launch  turtlebot3_simulation.launch  turtlebot3_stage_1.launch  turtlebot3_stage_2.launch  turtlebot3_stage_3.launch  turtlebot3_stage_4.launch  turtlebot3_world.launch  velodyne_test.launch
src/turtlebot3_simulations/turtlebot3_my_controller/models/brick/: model.config  model.sdf
src/turtlebot3_simulations/turtlebot3_my_controller/models/velodyne_hdl32/: model.sdf
src/turtlebot3_simulations/turtlebot3_my_controller/src/: serverHandler.cpp  turtlebot3_drive.cpp
src/velodyne_plugin/: CMakeLists.txt  velodyne_model_plugin.cc  velodyne_model_plugin.cpp  velodyne_model_plugin.h  velodyne_sensor_plugin.cc  velodyne_sensor_plugin.cpp  velodyne_sensor_plugin.h
src/velodyne_plugin/model_plugin/: velodyne_model_plugin.cpp  velodyne_model_plugin.h
src/velodyne_plugin/msg/: VelodyneModel.h  VelodyneModel.msg
src/velodyne_plugin/sensor_plugin/: velodyne_sensor_plugin.cpp  velodyne_sensor_plugin.h
velodyne_hdl32/: model.sdf
velodyne_plugin/: CMakeLists.txt  velodyne.world  velodyne_plugin.cc
(+344 files in other folders)
